[gd_scene load_steps=6 format=3 uid="uid://c8wlbqwuf2mcv"]

[ext_resource type="Script" path="res://Resources/Consumables/consumable_class.gd" id="1_mc67r"]
[ext_resource type="Script" path="res://Scripts/Consumables/Effects/grenade_effect.gd" id="3_0hnuq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idi5e"]
size = Vector2(24, 24)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4such"]
bg_color = Color(0.688023, 0.596125, 0.233008, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4ooe"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="Grenade" type="Node2D"]
z_index = 1
script = ExtResource("1_mc67r")

[node name="ConsumableImage" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_idi5e")

[node name="ConsumableUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
mouse_filter = 2

[node name="ShopPanel" type="Panel" parent="ConsumableUI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -32.0
offset_top = 6.0
offset_right = -2.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4such")

[node name="ShopLabel" type="Label" parent="ConsumableUI/ShopPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="ConsumableUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 12)
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 31.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="Panel" parent="ConsumableUI/InfoLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q4ooe")

[node name="Effect" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_0hnuq")
